--- a/Horseshoe.NET/Horseshoe.NET.csproj
+++ b/Horseshoe.NET/Horseshoe.NET.csproj
@@ -78,6 +78,7 @@
     <Compile Include="ConsoleX\ConsoleUtil.cs" />
     <Compile Include="ConsoleX\Extensions\Extensions.cs" />
     <Compile Include="ConsoleX\ListIndexPolicy.cs" />
+    <Compile Include="IO\Http\HttpHeaders.cs" />
     <Compile Include="Text\LRUniformer.cs" />
     <Compile Include="ConsoleX\MenuSelection.cs" />
     <Compile Include="ConsoleX\Navigation.cs" />
