--- a/TestConsole/App.config
+++ b/TestConsole/App.config
@@ -1,5 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <section name="MyConfigTestSection" type="TestConsole.MyConfigTest.Section, TestConsole" />
+  </configSections>
+  <MyConfigTestSection>
+    <elements>
+      <add foo="Adam" bar="Sandler" />
+      <add foo="Adam" bar="Levine" />
+      <add foo="Alan" bar="Arkin" />
+    </elements>
+    <keyedElements>
+      <add foo="Adam" bar="Sandler" />
+      <add foo="Adam" bar="Levine" />
+      <add foo="Alan" bar="Arkin" />
+    </keyedElements>
+  </MyConfigTestSection>
   <appSettings>
     <add key="Horseshoe.NET:ActiveDirectory.Domain" value="lgeenergy.int" />
   </appSettings>
